--- a/config.ini
+++ b/config.ini
@@ -4,9 +4,14 @@ Description = CursedGPT leverages the Hugging Face Transformers library to inter
 
 [ProjectStructure]
 MainScript = main.py
-RedirectScript = redirect.py
+TransformerScript = scripts/transformer.py
+Transformer-t2s-Script = scripts/transformer-t2s.py
+Transformer-s2t2s-Script = scripts/transformer-s2t2s.py
+Transforemer-WebcamScript = scripts/transformer-WebcamScript.py
 AppScript = app.py
 
 [Scripts]
 TransformerScript = transformer.py
 TextToSpeechScript = transformer-t2s.py
+SpeechToTextToSpeechScript = transformer-s2t2s.py
+WebcamScript = transformer-webcam.py
