--- a/config.json
+++ b/config.json
@@ -4,12 +4,17 @@
     "Description": "CursedGPT leverages the Hugging Face Transformers library to interact with a pre-trained GPT-2 model. It employs TensorFlow for model management and AutoTokenizer for efficient tokenization. The script enables users to input prompts interactively, generating text responses from the GPT-2 model. To improve the user experience, unnecessary warning messages related to the transformers library are effectively suppressed.",
     "ProjectStructure": {
       "MainScript": "main.py",
-      "RedirectScript": "redirect.py",
+      "TransformerScript": "scripts/transformer.py",
+      "Transformer-t2s-Script": "scripts/transformer-t2s.py",
+      "Transformer-s2t2s-Script": "scripts/transformer-s2t2s.py",
+      "Transforemer-WebcamScript": "scripts/transformer-WebcamScript.py",
       "AppScript": "app.py"
     },
     "Scripts": {
       "TransformerScript": "transformer.py",
-      "TextToSpeechScript": "transformer-t2s.py"
+      "TextToSpeechScript": "transformer-t2s.py",
+      "SpeechToTextToSpeechScript": "transformer-s2t2s.py",
+      "WebcamScript": "transformer-webcam.py"
     }
   }
 }
