--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "CursedGPTConfig": {
+  "Config": {
     "AppName": "CursedGPT",
     "Description": "CursedGPT leverages the Hugging Face Transformers library to interact with a pre-trained GPT-2 model. It employs TensorFlow for model management and AutoTokenizer for efficient tokenization. The script enables users to input prompts interactively, generating text responses from the GPT-2 model. To improve the user experience, unnecessary warning messages related to the transformers library are effectively suppressed.",
     "ProjectStructure": {
