--- a/config.json
+++ b/config.json
@@ -9,7 +9,8 @@
       "TransformerScript": "scripts/transformer.py",
       "Transformer-t2s-Script": "scripts/transformer-t2s.py",
       "Transformer-s2t2s-Script": "scripts/transformer-s2t2s.py",
-      "Transformer-WebcamScript": "scripts/transformer-WebcamScript.py",
+      "Transformer-WebcamScript": "scripts/transformer-webcam.py",
+      "RedirectScript":"scripts/redirect.py",
       "System":{
 
       },
